# x808

./: .gitignore  CMakeLists.txt  LICENSE  README.md  colladaExport.py  commonGeneric.vert  defaultnormal.embed  dummy.frag  dummy.vert  finalScene.frag  fxaa.include  pack001.pak  todo  xeconfig
atlasmaker/: CMakeLists.txt
atlasmaker/src/: debugui.cpp  debugui.hpp  main.cpp  maker.cpp  maker.hpp
editor/: CMakeLists.txt
editor/imgui/: imgui_dock.cpp  imgui_dock.h  imgui_impl_xe_gl.cpp  imgui_impl_xe_gl.hpp  imguidock.h  imguihelper.cpp
editor/src/: main.cpp  uilayer.cpp  uilayer.hpp  xeemain.cpp
engine/: CMakeLists.txt
engine/embedded/: embedded.cpp  embedded.hpp
engine/embedded/files/: errortexture.embed
engine/include/xe/: common.hpp  config.hpp  gameobject.hpp  string.hpp
engine/include/xe/animation/: spriteanimation.hpp
engine/include/xe/app/: application.hpp
engine/include/xe/audio/: audiocontext.hpp  audiomaster.hpp  audiosource.hpp
engine/include/xe/core/: filesystem.hpp  vfs.hpp
engine/include/xe/ecs/: ecs.hpp  ecscomponent.hpp  ecssystem.hpp
engine/include/xe/gfx/: ambientocclusion.hpp  baseshader.hpp  batchrenderer2d.hpp  blur.hpp  bufferlayout.hpp  camera.hpp  cascadedshadowmap.hpp  circleshape.hpp  color.hpp  context.hpp  convexshape.hpp  defaultuniforms.hpp  deferredrenderer.hpp  enums.hpp  finalfx.hpp  framebuffer.hpp  gbuffer.hpp  hbao.hpp  indexbuffer.hpp  indexedmodel.hpp  layer.hpp  layer2d.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  polygon.hpp  quad.hpp  rectangleshape.hpp  rendereffect.hpp  renderer.hpp  renderer2d.hpp  scene.hpp  scenerenderer.hpp  shader.hpp  shaderconstant.hpp  shadersampler.hpp  shaderuniform.hpp  shadowmap.hpp  shadows.hpp  (+10 more)
engine/src/: common.cpp  common.hpp  config.cpp  config.hpp  gameobject.hpp  string.cpp  xeint.hpp
engine/src/animation/: spriteanimation.cpp
engine/src/app/: application.cpp  layerstack.cpp  layerstack.hpp  systemstack.cpp  systemstack.hpp
engine/src/application/: application.cpp  application.hpp  input.cpp  input.hpp  window.cpp  window.hpp
engine/src/audio/: alcommon.cpp  alcommon.hpp  audiocontext.cpp  audiomaster.cpp  audiosource.cpp
engine/src/components/: component.hpp  components.hpp  entity.hpp  gamecomponent.hpp  spritecomponent.hpp  transform.hpp  transformcomponent.hpp
engine/src/core/: gameobject.cpp  gameobject.hpp  genericfilesystem.cpp  transform.cpp  transform.hpp  vfs.cpp
engine/src/ecs/: ecs.cpp  ecs.hpp  ecscomponent.cpp  ecscomponent.hpp  ecssystem.cpp  ecssystem.hpp
engine/src/embedded/: embedded.cpp  embedded.hpp
engine/src/events/: event.hpp  eventdispatcher.hpp  events.hpp  ieventlistener.hpp  keyevent.hpp  mouseevent.hpp  windowevent.hpp
engine/src/gfx/: ambientocclusion.cpp  baseshader.cpp  batchrenderer2d.cpp  blur.cpp  camera.hpp  cascadedshadowmap.cpp  circleshape.cpp  color.hpp  context.cpp  convexshape.cpp  deferredrenderer.cpp  deferredrenderer.hpp  enums.cpp  finalfx.cpp  forwardrenderer.cpp  forwardrenderer.hpp  forwardrenderershader.cpp  forwardrenderershader.hpp  framebuffer.cpp  gbuffer.cpp  glcommon.hpp  hbao.cpp  indexbuffer.cpp  indexedmodel.cpp  indexedmodel.hpp  irenderer.hpp  irenderer3d.hpp  layer.cpp  layer2d.cpp  light.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  polygon.cpp  quad.cpp  rectangleshape.cpp  renderable2d.cpp  (+27 more)
engine/src/loaders/: audioloader.cpp  fontloader.cpp  imageloader.cpp  imageloader.hpp  modelloader.cpp  sceneloader.cpp  sceneloader.hpp  shaderloader.cpp
engine/src/math/: aabb.cpp  aabb.hpp  aobb.cpp  aobb.hpp  geometry.cpp  geometry.hpp  mat4.cpp  mat4.hpp  math.hpp  quat.cpp  quat.hpp  rect.cpp  rect.hpp  transform.hpp  triangulator.cpp  tvec2.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
engine/src/objects/: gameobject.cpp  gameobject.hpp  sprite.cpp  sprite.hpp  spritecomponent.cpp
engine/src/resources/: font.cpp  font.hpp  fontmanager.cpp  fontmanager.hpp  shaderfactory.cpp  shaderfactory.hpp  shaderfile.cpp  shaderfile.hpp  shadermanager.cpp  shadermanager.hpp  sound.cpp  sound.hpp  soundmanager.cpp  soundmanager.hpp  texturemanager.cpp  texturemanager.hpp
engine/src/systems/: shell.cpp
engine/src/timeline/: ramp.cpp
engine/src/utils/: loadimage.cpp  loadimage.hpp  loadmodel.cpp  loadmodel.hpp  log.cpp  log.hpp  logger.cpp  noncopyable.hpp  random.cpp  random.hpp  rectpack.cpp  singleton.hpp  sleep.hpp  string.cpp  string.hpp  timer.cpp  timer.hpp  timestep.hpp  utf.hpp  utf.inl
engine/src/window/: cursor.hpp  event.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  platforminput.hpp  platformwindow.cpp  platformwindow.hpp  videomode.cpp  videomode.hpp  window.cpp  window.hpp
engine/src/world/: spatialdata.cpp  spatialdata.hpp  worldloader.cpp  worldloader.hpp  worldobject.cpp  worldobject.hpp
engine/tools/: CMakeLists.txt
sandbox/: CMakeLists.txt  light2d.frag  light2d.vert  mesh.frag  mesh.vert
sandbox/src/: debugui.cpp  debugui.hpp  dummyplayer.cpp  dummyplayer.hpp  dummyplayercomponent.hpp  dummyplayercontrolsystem.hpp  emptyscene.cpp  emptyscene.hpp  iexamplelayer.hpp  itestlayer.hpp  main.cpp  mainmenu.cpp  mainmenu.hpp  orthocameracomponent.hpp  orthocameramovesystem.hpp  orthocamerasystem.hpp  test2d.cpp  test2d.hpp  test3d.cpp  test3d.hpp  test3ddeferred.cpp  test3ddeferred.hpp  testb2d.cpp  testb2d.hpp  testecs.cpp  testecs.hpp  testl2d.cpp  testl2d.hpp  testp2d.cpp  testp2d.hpp  testui.cpp  testui.hpp
sandbox/src/2d/: cameramovement2d.hpp  example0.hpp  example01.cpp  example01.hpp  examplebox2d.cpp  examplelights2d.cpp  examplelights2d.hpp  exampleparticles.cpp  exampleparticles.hpp  exampleperformance2d.cpp  exampleperformance2d.hpp
sandbox/src/3d/: dummyplayer.hpp  example3d.cpp  example3d.hpp  examplescene.cpp  examplescene.hpp  examplesound.cpp  examplesound.hpp
sandbox/xe_sandbox_assets/textures/: bgr.jfif  test.atlas
tools/: CMakeLists.txt
tools/include/xetools/: spak.hpp
tools/src/: imgtobin.cpp
tools/src/imgtobin/: imgtobin.cpp
tools/src/spak/: main.cpp  spak.cpp  spakmain.cpp
(+483 files in other folders)
